Fix Semafor display on iPhones

--- a/src/App.scss
+++ b/src/App.scss
@@ -70,23 +70,23 @@ button {
 // Semafor
 .semafor {
     .button-container {
-        --size: min(70vw, 400px);
+        --size: min(70vw, 70vh, 400px);
         width: var(--size);
         height: var(--size);
         max-width: var(--size);
         max-height: var(--size);
         
-        border: 2px solid #ccc;
         border-radius: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
-        position: relative;
+        position: relative; 
 
         > button {
+            padding: 0;
             position: absolute;
-            width: 18%;
-            height: 18%;
+            width: 20%;
+            height: 20%;
             font-size: calc(20px + 2vw);
             border-radius: 50%;
             text-align: center;
@@ -100,13 +100,14 @@ button {
             &:nth-child(7) {--angle: 0deg;}
             &:nth-child(8) {--angle: 45deg;};
 
-            transform: rotate(var(--angle)) translate(230%) rotate(calc(-1 * var(--angle)));
+            transform: rotate(var(--angle)) translate(200%) rotate(calc(-1 * var(--angle)));
 
             &.clicked::before {
                 content: '';
                 position: absolute;
                 width: 5px;
-                height: calc(calc(var(--size) / 2) / 100 * 83.5);
+                height: calc(calc(var(--size) / 2) / 100 * 81);
+                border-radius: 2px;
                 background-color: white;
                 top: 50%;
                 left: 50%;
